# noir-runner

./: Cargo.toml  README.md
src/: abi.rs  error.rs  lib.rs  runner.rs
tests/: Nargo.toml  integration-tests.rs
tests/circuits/: lib.nr
tests/export/: addition.json
