[package]
name = "noir-runner"
version = "0.1.1"
edition = "2024"

[dependencies]
serde = "1.0"
serde_json = "1.0"
acvm = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.3" }
nargo = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.3" }
noirc_abi = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.3" }
nargo_toml = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.3" }
noirc_driver = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.3" }
noirc_artifacts = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.3" }
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.3" }
